corrected the spacing, margins and paddings

--- a/src/styles/Clients.module.css
+++ b/src/styles/Clients.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    margin: 10rem 0;
+    /* margin: 10rem 0; */
+    margin-bottom: 10rem;
 }
 .top{
     display: flex;
