--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,8 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   gap: 40px;
+  height: 100vh;
 }
 .heading_ctr {
   display: flex;
