--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,9 +1,12 @@
+.projects_section{
+  margin: 10rem 0;
+}
 .heading_ctr {
   display: flex;
   flex-direction: column;
   gap: 10px;
   align-items: center;
-  margin: 10rem 0;
+  /* margin: 10rem 0; */
   margin-bottom: 5rem;
 }
 .head_txt {
