--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0 5rem;
+  margin: 10rem 0;
 }
 .heading_ctr {
   display: flex;
